--- a/uli-ui/src/styles.css
+++ b/uli-ui/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.dropDown{
+    width:100%;background-color:lightyellow;
+}
